--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,13 +1,5 @@
 <app-menu></app-menu>
 
 <div class="contenedor">
-    
-    <app-rating (rated)="manejadorRated($event)"></app-rating>
-    <h2>{{ titles.enCines }}</h2>
-
-    <app-listado-peliculas [peliculas]="peliculasEnCine"></app-listado-peliculas>
-
-    <h2>{{ titles.futurosEstrenos }}</h2>
-
-    <app-listado-peliculas [peliculas]="peliculasFuturosEstrenos"></app-listado-peliculas>
+    <router-outlet></router-outlet>
 </div>
