--- a/front-end/src/app/peliculas/listado-peliculas/listado-peliculas.component.css
+++ b/front-end/src/app/peliculas/listado-peliculas/listado-peliculas.component.css
@@ -1,9 +1,28 @@
-p {
-    color: red;
+.peliculas-contenedor {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
 }
 
-.contenedor-pelicula {
-    border: 1px solid black;
-    padding: 1rem;
-    margin-bottom: 1rem;
+.pelicula-contenedor {
+    margin-right: 2%;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+p {
+    max-width: 225px;
+    height: 44px;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+image {
+    width: 255px;
+    height: 300px;
+}
+
+button {
+    margin-left: 1em;
 }
