--- a/front-end/src/app/peliculas/listado-peliculas/listado-peliculas.component.html
+++ b/front-end/src/app/peliculas/listado-peliculas/listado-peliculas.component.html
@@ -1,17 +1,17 @@
 <app-listado-generico [listado]="peliculas">
-  <ng-container vacio>
-    <div>Mensaje personalizado para el contenido <b>vacío</b></div>
-  </ng-container>
 
   <ng-container contenido>
-    <div *ngFor="let pelicula of peliculas; let index = index" class="contenedor-pelicula">
-      <div>
-        <h2>{{ index + 1 }} - {{ pelicula.titulo | uppercase }} 
-          <button style="margin-left: 1rem;" (click)="remover(index)">Remover</button>
-        </h2>
+    <div class="peliculas-contenedor">
+      <div *ngFor="let pelicula of peliculas; let index = index" class="pelicula-contenedor">
+        <a><img [src]="pelicula.poster" alt="Poster"/></a>
+        <p>
+          <a>{{ pelicula.titulo }}</a>
+        </p>
+        <div>
+          <a mat-flat-button color="primary">Editar</a>
+          <button mat-flat-button color="warn" type="button">Borrar</button>
+        </div>
       </div>
-      <div>{{ pelicula.fechaLanzamiento | date: "dd/MMMM/yyyy" }}</div>
-      <div>{{ pelicula.precio | currency }}</div>
     </div>
   </ng-container>
 </app-listado-generico>
