Se crearon varios componentes y se colocaron algunas reglas de ruteo 🕸

--- a/front-end/src/app/menu/menu.component.html
+++ b/front-end/src/app/menu/menu.component.html
@@ -7,4 +7,13 @@
     <div>
         <a mat-button routerLink="generos">Géneros</a>
     </div>
+    <div>
+        <a mat-button routerLink="actores">Actores</a>
+    </div>
+    <div>
+        <a mat-button routerLink="cines">Cines</a>
+    </div>
+    <div>
+        <a mat-button routerLink="peliculas/crear">Crear Película</a>
+    </div>
 </mat-toolbar>
