--- a/front-end/src/app/generos/crear-genero/crear-genero.component.html
+++ b/front-end/src/app/generos/crear-genero/crear-genero.component.html
@@ -1,1 +1,16 @@
-<button mat-flat-button color="primary" type="button" (click)="guardarGenero()">Crear nuevo</button>
+<h2>Crear Género</h2>
+
+<form (submit)="guardarGenero()" [formGroup]="form">
+    <mat-form-field appearance="outline">
+        <mat-label>Nombre*</mat-label>
+        <input formControlName="nombre" matInput/>
+    </mat-form-field>
+    <div>
+        <button mat-flat-button color="primary">
+            Guardar Cambios
+        </button>
+        <a mat-stroked-button routerLink="/generos"> 
+            Cancelar
+        </a>
+    </div>
+</form>
