--- a/front-end/src/app/menu/menu.component.html
+++ b/front-end/src/app/menu/menu.component.html
@@ -5,6 +5,11 @@
         </a>
     </span>
     <div>
+        <a mat-button routerLink="peliculas/buscar">
+            <mat-icon>search</mat-icon> Buscar Películas
+        </a>
+    </div>
+    <div>
         <a mat-button routerLink="generos">Géneros</a>
     </div>
     <div>
