--- a/front-end/src/app/actores/crear-actor/crear-actor.component.html
+++ b/front-end/src/app/actores/crear-actor/crear-actor.component.html
@@ -1,1 +1,3 @@
-<p>crear-actor works!</p>
+<p>Crear Actor</p>
+
+<app-formulario-actores (submit)="guardarCambios($event)"></app-formulario-actores>
