--- a/front-end/src/app/peliculas/filtro-peliculas/filtro-peliculas.component.html
+++ b/front-end/src/app/peliculas/filtro-peliculas/filtro-peliculas.component.html
@@ -1,2 +1,29 @@
 <h2>Buscar Película</h2>
 
+<form [formGroup]="form">
+    <mat-form-field appearance="outline">
+        <mat-label>Titulo</mat-label>
+        <input formControlName="titulo" matInput/>
+    </mat-form-field>
+    
+    <mat-form-field appearance="outline">
+        <mat-label>Genero</mat-label>
+        <mat-select formControlName="generoId">
+            <mat-option *ngFor="let genero of generos" [value]="genero.id">{{ genero.nombre }}</mat-option>
+        </mat-select>
+    </mat-form-field>
+
+    <div>
+        <mat-checkbox formControlName="proximosEstrenos">Próximos Estrenos</mat-checkbox>
+    </div>
+
+    <div>
+        <mat-checkbox formControlName="enCines">En Cines</mat-checkbox>
+    </div>
+
+    <div class="contenedor-limpiar ">
+        <button mat-flat-button color="warn" (click)="limpiar()">Limpiar</button>
+    </div>
+
+    <app-listado-peliculas [peliculas]="peliculas"></app-listado-peliculas>
+</form>
